<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_input"
    android:weightSum="100"
    android:paddingTop="10sp"
    android:paddingBottom="10sp"
    android:paddingLeft="10sp"
    android:paddingRight="10sp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/activity_input123"
        android:layout_weight="15"
        android:weightSum="5">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/volume"
            android:id="@+id/tvvolume"
            android:textSize="30sp"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:gravity="right"/>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sbvolume"
                android:gravity="left"
                android:layout_gravity="center_horizontal"

                android:max="7"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="15"
        android:weightSum="7"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vibration"
            android:id="@+id/tvvibrate"
            android:gravity="right"
            android:layout_gravity="center"
            android:layout_weight="3"/>

        <ToggleButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:textAlignment="center"
            android:id="@+id/tbvibrate"
            android:gravity="center"
            android:layout_gravity="center"

            android:layout_weight="4"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="2">
        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/start"
            android:id="@+id/tvstart"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/end"
            android:id="@+id/tvend"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="2">


        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvcstart"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_weight="1"
            android:text="2132435"
            />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvcend"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_weight="1"
            android:text="2132435"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="2">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="14-11-1995"
            android:id="@+id/tvstartdate"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="14-11-1995"
            android:id="@+id/tvenddate"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="15"
        android:weightSum="3"
        android:orientation="horizontal">
        <Space
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:textSize="30sp"
            android:id="@+id/bokf"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>